Implement Tier-2 corpus replay and cross-validation harness for spell recognition